--- a/html/index.html
+++ b/html/index.html
@@ -57,7 +57,7 @@
 
 <body class="section-index">
 	<div class="d-flex j-between mt10 mb10">
-		<h1 class="m-0">KT커스터마이징</h1>
+		<h1 class="m-0">자산관리 영업지원 App</h1>
 	</div>
 	<!-- Main content -->
 	<div class="content">
@@ -110,6 +110,107 @@
 						<td></td>
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">template</a></td>
+						<td></td>
+					</tr>
+				</tbody>
+				<tbody data-folder="components">
+					<tr>
+						<td>Components</td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Variable</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_variable</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>button</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_button</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>input</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_input</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>card</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_card</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>list</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_list</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>section</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_section</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>bottom nav</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_bottomnav</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>bottom btn</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_bottombtn</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>layer popup</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_layerpopup</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>modal select</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_modal_select</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>work label</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_work_label</a></td>
 						<td></td>
 					</tr>
 				</tbody>
@@ -195,109 +296,6 @@
 						<td class="al article"><a href="" class="link inner-arrow">quill</a></td>
 						<td></td>
 					</tr>
-				</tbody>
-				<tbody data-folder="components">
-					<tr>
-						<td>Components</td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>tab</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_tab</a></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>input</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_input</a></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>button</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_button</a></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>card</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_card</a></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>list</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_list</a></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>section</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_section</a></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>bottom nav</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_bottomnav</a></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>bottom btn</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_bottombtn</a></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>layer popup</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_layerpopup</a></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>modal select</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_modal_select</a></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>work label</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_work_label</a></td>
-						<td></td>
-					</tr>
-
-
 				</tbody>
 				<tbody data-folder="F01">
 					<tr>
