--- a/html/index.html
+++ b/html/index.html
@@ -128,8 +128,17 @@
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>button</td>
+						<td>Button</td>
 						<td class="al article"><a href="" class="link inner-arrow">component_button</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Toast</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_toast</a></td>
 						<td></td>
 					</tr>
 					<!-- <tr>
