--- a/html/index.html
+++ b/html/index.html
@@ -124,7 +124,7 @@
 						<td></td>
 					</tr>
 					<tr>
-						<td></td>
+						<td> </td>
 						<td></td>
 						<td></td>
 						<td></td>
@@ -139,6 +139,15 @@
 						<td></td>
 						<td>Toast</td>
 						<td class="al article"><a href="" class="link inner-arrow">component_toast</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Bottom Sticky Button</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_bottombtn</a></td>
 						<td></td>
 					</tr>
 					<!-- <tr>
