--- a/html/index.html
+++ b/html/index.html
@@ -124,6 +124,15 @@
 						<td></td>
 					</tr>
 					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Typography</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_typohraphy</a></td>
+						<td></td>
+					</tr>
+					<tr>
 						<td> </td>
 						<td></td>
 						<td></td>
@@ -150,6 +159,7 @@
 						<td class="al article"><a href="" class="link inner-arrow">component_bottombtn</a></td>
 						<td></td>
 					</tr>
+
 					<!-- <tr>
 						<td></td>
 						<td></td>
