--- a/html/index.html
+++ b/html/index.html
@@ -56,7 +56,7 @@
 </head>
 
 <body class="section-index">
-	<div class="d-flex j-between mt10 mb10">
+	<div class="d-flex j-between mx10 my10">
 		<h1 class="m-0">자산관리 영업지원 App</h1>
 	</div>
 	<!-- Main content -->
@@ -157,6 +157,24 @@
 						<td></td>
 						<td>Bottom Sticky Button</td>
 						<td class="al article"><a href="" class="link inner-arrow">component_bottombtn</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Tab</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_tab</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Input Text</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_input_text</a></td>
 						<td></td>
 					</tr>
 
