--- a/html/index.html
+++ b/html/index.html
@@ -177,7 +177,33 @@
 						<td class="al article"><a href="" class="link inner-arrow">component_input_text</a></td>
 						<td></td>
 					</tr>
-
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Input Checkbox</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_input_checkbox</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Input Radio</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_input_radio</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Input Toggle</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_input_toggle</a></td>
+						<td></td>
+					</tr>
 					<!-- <tr>
 						<td></td>
 						<td></td>
