--- a/html/index.html
+++ b/html/index.html
@@ -223,6 +223,24 @@
 						<td class="al article"><a href="" class="link inner-arrow">component_alert</a></td>
 						<td></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Text Items</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_text_items</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Modal Popup</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_modal</a></td>
+						<td></td>
+					</tr>
 					<!-- <tr>
 						<td></td>
 						<td></td>
