--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -90,7 +90,7 @@
 				<!-- group -->
 				<div class="group py0">
 					<div class="group-content">
-						<button type="button" class="btn-noborder"><i class="ico-sort"></i>순서 설정</button>
+						<button type="button" class="btn-noborder" data-micromodal-trigger="modal-businesscard"><i class="ico-sort"></i>순서 설정</button>
 					</div>
 				</div>
 				<!-- //group -->
@@ -157,6 +157,203 @@
 	</main>
 	<!-- main -->
 
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-businesscard" aria-hidden="true">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
+				<div class="modal__header">
+					<strong class="modal__title title-large">명함 순서 설정</strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content">
+
+					<div class="content content-fluid">
+						<p class="description info p24">순서를 바꿀 명함을 끌어 순서를 변경하세요.</p>
+
+						<div id="sortingBusinessCard" class="businesscard-list">
+							<div class="list-group-item">
+								<strong class="title-medium">Item 1</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 2</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 3</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 4</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 5</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+							<div class="list-group-item">
+								<strong class="title-medium">Item 6</strong>
+								<button type="button" class="handler" aria-label="순서 이동"></button>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<div class="modal__footer">
+					<!-- bottom-btn -->
+					<div class="bottom-btn">
+						<div class="btn-wrap">
+							<button type="button" class="btn-large btn-primary">저장</button>
+						</div>
+					</div>
+					<!-- //bottom-btn -->
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
 	<script>
 		function swalFire() {
 			Swal.fire({
@@ -179,6 +376,13 @@
 				}
 			});
 		}
+
+		var sortableOption = {
+			group: 'shared',
+			animation: 150,
+			handle: '.handler', // handle's class
+		}
+		sortableLeft = Sortable.create(sortingBusinessCard, sortableOption);
 	</script>
 </body>
 
