--- a/html/index.html
+++ b/html/index.html
@@ -241,6 +241,16 @@
 						<td class="al article"><a href="" class="link inner-arrow">component_modal</a></td>
 						<td></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Tags</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_tags</a></td>
+						<td></td>
+					</tr>
+
 					<!-- <tr>
 						<td></td>
 						<td></td>
