--- a/html/PBWBU/PBWBU000001_nodata.html
+++ b/html/PBWBU/PBWBU000001_nodata.html
@@ -95,7 +95,7 @@
 					<!-- init-business-card -->
 					<div class="init-business-card">
 						<picture>
-							<source setsrc="../../assets/images/PBWBU/init_business_card.svg">
+							<source srcset="../../assets/images/PBWBU/init_business_card.svg">
 							<img src="../../assets/images/PBWBU/init_business_card.svg" alt="">
 						</picture>
 						<p class="description">내 명함을 등록하고 공유해 보세요.</p>
