--- a/html/index.html
+++ b/html/index.html
@@ -250,6 +250,15 @@
 						<td class="al article"><a href="" class="link inner-arrow">component_tags</a></td>
 						<td></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Cards</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_card</a></td>
+						<td></td>
+					</tr>
 
 					<!-- <tr>
 						<td></td>
